src/objects/Case_Team__c.object
<CustomObject>
    <description>Used to look up the case record type and team based on the incoming email address</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Service_Address__c</fullName>
        <description>Email Service Address used to lookup the record type</description>
        <inlineHelpText>Email Service Address used to lookup the record type</inlineHelpText>
        <label>Email Service Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>The public facing email address that is forwarding to the Salesforce email service address.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>CaseTeams</relationshipLabel>
        <relationshipName>CaseTeams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Developer_Name__c</fullName>
        <description>Developer name of the record type</description>
        <inlineHelpText>Developer name of the record type</inlineHelpText>
        <label>Record Type Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Name</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipName>Team_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Team</description>
        <inlineHelpText>Team</inlineHelpText>
        <label>Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CaseTeam</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Email_Service_Address__c</columns>
        <columns>Email__c</columns>
        <columns>Record_Type_Developer_Name__c</columns>
        <columns>Team__c</columns>
        <columns>Language__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CaseTeams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>